--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ nav ul li a:hover {
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #fff;
 }
+
 
 .banner-content h2 {
     font-size: 48px;
@@ -61,6 +61,14 @@ nav ul li a:hover {
     margin-bottom: 30px;
 }
 
+.tag {
+    background-color: #ff6f61;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
 .btn {
     background-color: #ff6f61;
     color: #fff;
@@ -70,8 +78,9 @@ nav ul li a:hover {
     transition: background-color 0.3s ease;
 }
 
-.btn:hover {
-    background-color: #ff4f3a;
+.btn:hover,
+.tag:hover {
+    background-color: red;
 }
 
 .projects-section {
@@ -110,19 +119,22 @@ nav ul li a:hover {
     transform: translateY(-10px);
 }
 
-.about-section, .contact-section {
+.about-section,
+.contact-section {
     padding: 50px;
     background-color: #fff;
     text-align: center;
 }
-
-footer {
-    background-color: #1a1a1a;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
+ li{
+    text-align: left;
+    
 }
+a{
+    text-decoration: none;
+    background-color: rgb(46, 182, 220);
+    color: white;
+    padding: 0px 5px;
+    border: 2px solid rgb(85, 214, 234);
+    border-radius: 30px;
 
-footer p {
-    margin: 0;
 }
